--- a/ESLint/ES5/.eslintrc.json
+++ b/ESLint/ES5/.eslintrc.json
@@ -6,7 +6,7 @@
   },
   "rules": {
     "quotes": ["warn", "single"],
-    "indent": ["warn", 2],
+    "indent": ["warn", 2, { "SwitchCase": 1 }],
     "no-console": 0
   },
   "env": {
