--- a/Gulp/Advanced-Features/package.json
+++ b/Gulp/Advanced-Features/package.json
@@ -4,27 +4,25 @@
   "description": "Gulp Advanced Configuration",
   "main": "index.js",
   "scripts": {
-    "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build",
+    "build:prod": "gulp build --production",
+    "start": "gulp --development"
   },
-  "author": "TabCom",
+  "author": "Kyle Myers",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "fancy-log": "^1.3.2",
+    "browser-sync": "^2.26.3",
+    "eslint": "^5.7.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^8.0.0",
     "gulp-headerfooter": "^1.0.3",
     "gulp-imagemin": "^4.1.0",
-    "gulp-livereload": "^4.0.0",
-    "gulp-open": "^3.0.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-run": "^1.7.1",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.1"
-  },
-  "dependencies": {
-    "express": "^4.16.4"
+    "gulp-uglify": "^3.0.1",
+    "gulp-util": "^3.0.8",
+    "stylelint": "^9.6.0",
+    "stylelint-order": "^1.0.0"
   }
 }
